@@ -11,6 +11,7 @@ NEW FEATURES:
 BUGS FIXED:
 	Ticket numbers refer to https://sourceforge.net/p/mcj/tickets/#.
 	Debian bug numbers refer to https://bugs.debian.org/#.
+	o Allow circles or ellipses with negative radii. Ticket #49.
 	o Avoid "dimension too large error" with tikz output by avoiding
 	  coordinate values smaller than -16383.
 	o Make tests (test1.c) work with -fsanitize=address compiler option.
